syntax = "proto3";

package authentication;

service AuthenticationService {
    rpc RegisterAdmin (RegisterAdminDto) returns (AuthResponse) {}
}

message Profile {
    string id = 1;
    
    string username = 2;

    string email = 3;

    string role = 4;

    bool isTwoFactorEnabled = 5;

    bool isDeactivated = 6;

    string post = 7;
}

message RegisterAdminDto {
    string username = 1;

    string email = 2;

    string password = 3;
}

message AuthResponse {
    Profile profile = 1;

    string token = 2;
}
